# silva

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
examples/: convert_xgboost.rs  prediction.rs
sample_data/xgboost/binary_classification/: X.csv  xgb_model.json
sample_data/xgboost/multiclass_classification/: y.csv
sample_data/xgboost/regression/: X.csv
src/: forest.rs  lib.rs  map.rs  parser.rs  tree.rs
src/parser/: builtin.rs  lightgbm.rs  test_utils.rs  xgboost.rs
test_data/lightgbm/: generate_sample_data.py
test_data/lightgbm/binary_classification/: X.csv  model.txt  y.csv
test_data/lightgbm/multiclass_classification/: X.csv  model.txt  y.csv
test_data/lightgbm/regression/: X.csv  model.txt  y.csv
test_data/native/: model.json
test_data/native/multiclass_classification/: X.csv
test_data/xgboost/: generate_sample_data.py
test_data/xgboost/binary_classification/: X.csv  model.json  y.csv
test_data/xgboost/multiclass_classification/: X.csv  model.json  xgb_model.json  y.csv
test_data/xgboost/regression/: X.csv  model.json  xgb_model.json  y.csv
