[package]
name = "silva"
version = "0.1.0"
edition = "2024"
authors = ["杜 世橋 Du Shiqiao <lucidfrontier.45@gmail.com>"]
repository = "https://github.com/lucidfrontier45/silva"
license = "MIT"
description = "A fast Rust inference engine for tree ensemble models supporting XGBoost, LightGBM, and native formats"
categories = ["science"]

[dependencies]
indexmap = { version = "2.12.1", features = ["serde"] }
itertools = "0.14.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serdeio = "0.5.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.100"
